--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/imgui"]
 	path = submodules/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "submodules/vulkan"]
+	path = submodules/vulkan
+	url = https://github.com/KhronosGroup/Vulkan-Headers.git
